--- a/kurry-matherne-portfolio/package.json
+++ b/kurry-matherne-portfolio/package.json
@@ -41,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^5.17.0"
+		"@prisma/client": "^5.17.0",
+		"dayjs": "^1.11.12"
 	}
 }
