--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
@@ -42,6 +43,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.17.0",
-		"dayjs": "^1.11.12"
+		"dayjs": "^1.11.12",
+		"dotenv": "^16.4.5"
 	}
 }
