--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,5 +13,10 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker compose build
+    - name: Login to Docker
+      env:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+      run: docker login --username username  --password password
     - name: Push to DockerHub
       run: docker image push alexphebert2000/kurry-portfolio:latest
