--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build the Docker image
       run: docker compose build
+    - name: Test
+      run: echo "$env:username"
     - name: Login to Docker
       env:
         username: ${{ secrets.DOCKER_USERNAME }}
