--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,6 @@ jobs:
       env:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-      run: docker login --username "$env:username" --password "$env:password"
+      run: docker login --username "$username" --password "$password"
     - name: Push to DockerHub
       run: docker image push alexphebert2000/kurry-portfolio:latest
